🎨 Fixed unexpected scrollbars in modals when using Firefox (#974)
no issue
- when opening the "Invite user" modal (and possibly others) Firefox would flash a scrollbar and allow the modal body to be scrolled vertically by a tiny amount
- removed unnecessary `overflow: auto` on the modal body element

--- a/ghost/admin/app/styles/components/modals.css
+++ b/ghost/admin/app/styles/components/modals.css
@@ -119,7 +119,6 @@
 
 .modal-body {
     position: relative;
-    overflow-y: auto;
 }
 
 .modal-body p {
